# chfem

./: .gitignore  .readthedocs.yml  CMakeLists.txt  LICENSE  README.md  environment.yml  setup.py  tutorial.ipynb
chfem/: __init__.py  compute_properties.py  includes.h  io.py  main.c  main_wrapper.c
chfem/femhmg/: femhmg.c  femhmg.h
chfem/femhmg/cudapcg/: cudapcg.h
chfem/femhmg/cudapcg/kernels/: image.cu
chfem/femhmg/cudapcg/solvers/: minres2.cu  minres3.h  pcg2.h  pminres3.cu  xreduce.h
chfem/femhmg/physical_phenomena/: femhmg_elastic_3D.h  femhmg_thermal_2D.c
chfem/femhmg/report/: report.c  report.h
chfem/src/: chfem_wrapper.c  includes.h  main.c
chfem/src/femhmg/: femhmg.c  femhmg.h  includes.h
chfem/src/femhmg/cudapcg/: cudapcg.cu  cudapcg.h
chfem/src/femhmg/cudapcg/kernels/: image.h  matrix_free.cu  matrix_free.h  wrappers.cu  wrappers.h
chfem/src/femhmg/cudapcg/solvers/: cg.cu  cg2.h  pcg.cu  pcg2.cu  pcg3.cu  pminres.cu  pminres2.cu  solvers_utils.cu
chfem/src/femhmg/physical_phenomena/: femhmg_2D.h  femhmg_3D.h  femhmg_elastic_2D.c  femhmg_elastic_3D.c  femhmg_fluid_2D.c  femhmg_fluid_3D.c  femhmg_thermal_2D.c  femhmg_thermal_3D.c
compile/: compile_chfem_gpu.py
docs/: Makefile  README.md  sphinx_env.yml
docs/source/: conf.py  index.md  tutorial.nblink
docs/source/api/: chfem.compute_properties.rst  chfem.io.rst  chfem.rst  chfem.wrapper.rst
docs/source/placeholders/: api.md  readme.md
examples/notebooks/: README.md  chfem_drp_benchmarks.ipynb  chfem_pipes_verification.ipynb  chfem_sphere_verification.ipynb
examples/scripts/: run_drp_benchmarks.py  run_pipe.py  run_sphere.py
examples/scripts/utils/: img_utils.py
examples/scripts/utils/c/: img_utils.c
input/benchmark/: 1000x1000.nf  1000x1000.raw  1000x1000.tif  100x100.nf  250x250.nf  250x250.raw  250x250.tif  500x500.nf  50x50.nf  50x50.raw  50x50.tif
input/cast_iron/: e_ggg40_100.nf  e_ggg40_200.nf  e_ggg40_300.nf  e_ggg40_400.nf  e_ggg40_50.nf  ggg40_100.nf  ggg40_100.raw  ggg40_200.nf  ggg40_300.nf  ggg40_400.nf  ggg40_50.nf  ggg40_50.raw
pychfem/: __init__.py  compute_properties.py  io.py
pychfem/chfem/: chfem_wrapper.c  includes.h  main.c
pychfem/chfem/femhmg/: femhmg.c
pychfem/chfem/femhmg/cudapcg/: cudapcg.cu
pychfem/chfem/femhmg/cudapcg/kernels/: utils.h  vector.cu
pychfem/chfem/femhmg/cudapcg/solvers/: solvers.h  solvers_utils.h
src/: includes.h  main.c
src/femhmg/: femhmg.c  femhmg.h  includes.h
src/femhmg/cudapcg/: cudapcg.cu  cudapcg.h  error_handling.h  includes.h
src/femhmg/cudapcg/kernels/: cudapcg_kernels_source.cu  cudapcg_kernels_source.h  cudapcg_kernels_wrappers.cu  cudapcg_kernels_wrappers.h  matrix_free.cu  matrix_free.h  utils.h  vector.cu  vector.h  wrappers.cu  wrappers.h
src/femhmg/cudapcg/solvers/: cg.cu  cg.h  cg2.cu  cg3.cu  cg3.h  cudapcg_default.cu  cudapcg_default.h  cudapcg_minres.cu  cudapcg_minres.h  cudapcg_nojacobi.cu  cudapcg_nojacobi.h  cudapcg_rd.cu  cudapcg_rd.h  cudapcg_sd.cu  cudapcg_sd.h  cudapcg_xrd.cu  cudapcg_xrd.h  cudapcg_xsd.cu  cudapcg_xsd.h  minres.cu  minres2.cu  minres2.h  minres3.cu  pcg.cu  pcg.h  pcg3.h  pminres.cu  pminres.h  pminres2.cu  pminres2.h  pminres3.cu  pminres3.h  solvers.h  stopping_criteria.cu  stopping_criteria.h  xreduce.cu
src/femhmg/physical_phenomena/: femhmg_2D.c  femhmg_2D.h  femhmg_3D.c  femhmg_3D.h  femhmg_elastic_2D.c  femhmg_elastic_2D.h  femhmg_elastic_3D.c  femhmg_elastic_3D.h  femhmg_fluid_2D.c  femhmg_fluid_2D.h  femhmg_fluid_3D.c  femhmg_fluid_3D.h  femhmg_thermal_2D.c  femhmg_thermal_2D.h  femhmg_thermal_3D.c  femhmg_thermal_3D.h
src/femhmg/report/: report.h
test/: compile_test.py  test.c  test_chfem.c  test_chfem.py
test/input/2D/elastic/: 100x100.nf  100x100_bin.nf
test/input/2D/fluid/: 100x100.nf
test/input/2D/thermal/: 100x100.nf  100x100_bin.nf
test/input/3D/: fibers_100x100x10.raw
test/input/3D/elastic/: ggg40_100.nf  ggg40_100_bin.nf
test/input/3D/fluid/: fibers_100x100x10.nf
test/input/3D/thermal/: ggg40_100.nf  ggg40_100_bin.nf
